panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__include__test_include_system_header.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/include/test_include_system_header.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_include_system_header.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `int` (not-equal `int` (bit-xor `int` (1 `int`) (0 `int`)) (bit-and `int` (0 `int`) (1 `int`))))
         (expression
            (combine `int`
               (assign `ptr<int>` (unnamed-temporary~3 `ptr<int>`)
                  (addressof `ptr<int>`
                     (x~2 `int`)))
               (assign `int` (deref `int` (unnamed-temporary~3 `ptr<int>`)) (bit-or `int` (deref `int` (unnamed-temporary~3 `ptr<int>`)) (0b1'1000 `int`)))))
         (expression
            (combine `int`
               (assign `ptr<int>` (unnamed-temporary~4 `ptr<int>`)
                  (addressof `ptr<int>`
                     (x~2 `int`)))
               (assign `int` (deref `int` (unnamed-temporary~4 `ptr<int>`)) (bit-and `int` (deref `int` (unnamed-temporary~4 `ptr<int>`)) (0xf `int`)))))
         (return (equal `int` (x~2 `int`) (0b1001 `int`))))))

----- stderr -----
