panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__include__test_stddef_include_guard.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/include/test_stddef_include_guard.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_stddef_include_guard.c"
   (typedef ptrdiff_t `long`)
   (typedef size_t `unsigned long`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `nullptr_t`)
   (definition external NULL~0 `int` (42 `int`))
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (return (NULL~0 `int`)))))

----- stderr -----
